--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
 install:
     - pip install -r requirements.txt
 script:
-    - coverage run testrunner.py
+    - coverage run -m unittest discover tests
 after_success:
     - bash <(curl -s https://codecov.io/bash)
