--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 appnope==0.1.0
 attrs==19.3.0
 backcall==0.1.0
-bleach==3.1.0
 boltons==19.3.0
 certifi==2019.9.11
 chardet==3.0.4
@@ -13,9 +12,6 @@ coverage==4.5.4
 debtcollector==1.22.0
 decorator==4.4.1
 dit==1.2.3
-docopt==0.6.2
-docutils==0.15.2
-entrypoints==0.3
 Flask==1.1.1
 gunicorn==19.9.0
 idna==2.8
@@ -25,20 +21,16 @@ ipython-genutils==0.2.0
 itsdangerous==1.1.0
 jedi==0.15.1
 Jinja2==2.10.3
-keyring==19.2.0
 MarkupSafe==1.1.1
-Metaphone==0.6
 more-itertools==7.2.0
 networkx==2.4
+nltk==3.4.5
 numpy==1.17.3
 packaging==19.2
 parso==0.5.1
 pbr==5.4.3
 pexpect==4.7.0
 pickleshare==0.7.5
-pipdeptree==0.13.2
-pipreqs==0.4.10
-pkginfo==1.5.0.1
 pluggy==0.13.0
 prettytable==0.7.2
 prompt-toolkit==2.0.10
@@ -47,20 +39,14 @@ py==1.8.0
 Pygments==2.4.2
 pyparsing==2.4.5
 pytest==5.3.0
-readme-renderer==24.0
 requests==2.22.0
-requests-toolbelt==0.9.1
 scipy==1.3.1
 six==1.12.0
 termgraph==0.2.0
-tqdm==4.38.0
 traitlets==4.3.3
-twine==3.0.0
 urllib3==1.25.6
 wcwidth==0.1.7
-webencodings==0.5.1
 Werkzeug==0.16.0
 wrapt==1.11.2
 yapf==0.28.0
-yarg==0.1.9
 zipp==0.6.0
