--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+amqp==2.5.2
 appnope==0.1.0
 attrs==19.3.0
 backcall==0.1.0
+billiard==3.6.1.0
 boltons==19.3.0
+celery==4.4.0
 certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
@@ -21,6 +24,9 @@ ipython-genutils==0.2.0
 itsdangerous==1.1.0
 jedi==0.15.1
 Jinja2==2.10.3
+kombu==4.6.7
+Mako==1.1.0
+Markdown==2.4.1
 MarkupSafe==1.1.1
 more-itertools==7.2.0
 networkx==2.4
@@ -29,6 +35,7 @@ numpy==1.17.3
 packaging==19.2
 parso==0.5.1
 pbr==5.4.3
+pdoc==0.3.2
 pexpect==4.7.0
 pickleshare==0.7.5
 pluggy==0.13.0
@@ -39,12 +46,15 @@ py==1.8.0
 Pygments==2.4.2
 pyparsing==2.4.5
 pytest==5.3.0
+pytz==2019.3
+redis==3.3.11
 requests==2.22.0
 scipy==1.3.1
 six==1.12.0
 termgraph==0.2.0
 traitlets==4.3.3
 urllib3==1.25.6
+vine==1.3.0
 wcwidth==0.1.7
 Werkzeug==0.16.0
 wrapt==1.11.2
